--- a/p8105_hw3_rk3445.md
+++ b/p8105_hw3_rk3445.md
@@ -206,6 +206,11 @@ instacart |>
 | Coffee Ice Cream |  13.77 |  14.32 |   15.38 |     15.32 |    15.22 |  12.26 |    13.83 |
 | Pink Lady Apples |  13.44 |  11.36 |   11.70 |     14.25 |    11.55 |  12.78 |    11.94 |
 
+From the table, Coffee Ice Cream is ordered the latest on Tuesday, with
+an average order time of 15.38 hours. Pink Lady Apples are ordered the
+latest on Wednesday, with an average order time of 14.25 hours, and the
+earliest on Monday.
+
 # Problem 2
 
 **Import, clean, and tidy Zillow datasets ** Import, clean, tidy NYC
@@ -260,9 +265,6 @@ zillow_nyc =
 ZIP codes are observed 116 times? How many are observed fewer than 10
 times? Why are some ZIP codes are observed rarely and others observed in
 each month?**
-
-(Question! Should I use the merged data of zipcode and zillow_nyc to
-consider the all the zipcodes instead of using only zillow dataset?)…!
 
 ``` r
 zipcode_all = 
@@ -424,10 +426,6 @@ ZIP-code-level rental prices across boroughs; put differently, your plot
 should facilitate the comparison of the distribution of average rental
 prices across boroughs. Comment on this plot.**
 
-!! question! The question says over each month but the zillow data
-already provides the monthly based rental price for each zip code. Does
-it mean that we need to compute the average over 2023?
-
 ``` r
 rental_2023 = 
   zillow_nyc |> 
@@ -436,27 +434,19 @@ rental_2023 =
   )  |> 
   filter(year == 2023) |> 
   group_by(zip_code, county_name) |> 
-  summarize(avg_zori = mean(zori)) |> 
-  ggplot(aes(x = county_name, y = avg_zori)) +
-  geom_boxplot() +
+  summarize(avg_zori = mean(zori), .groups = "drop") |> 
+  ggplot(aes(x = county_name, y = avg_zori, fill = county_name)) +
+  geom_boxplot(na.rm = TRUE) +
   labs(
     title = "Rental Prices Across Boroughs in 2023",    
     x = "County",
     y = "Average ZORI (Rental Price Index)"
-    
   ) +
-  theme_minimal()
-```
+  theme_minimal() +
+  theme(legend.position = "bottom") 
 
-    ## `summarise()` has grouped output by 'zip_code'. You can override using the
-    ## `.groups` argument.
-
-``` r
 rental_2023
 ```
-
-    ## Warning: Removed 36 rows containing non-finite outside the scale range
-    ## (`stat_boxplot()`).
 
 ![](p8105_hw3_rk3445_files/figure-gfm/unnamed-chunk-16-1.png)<!-- -->
 
@@ -473,9 +463,6 @@ to a results folder in your repository.**
 rental_allyear / rental_2023 
 ```
 
-    ## Warning: Removed 36 rows containing non-finite outside the scale range
-    ## (`stat_boxplot()`).
-
 ![](p8105_hw3_rk3445_files/figure-gfm/unnamed-chunk-17-1.png)<!-- -->
 
 ``` r
@@ -483,9 +470,6 @@ rental_plot = rental_allyear + rental_2023 + plot_layout(ncol = 2)
 
 ggsave("results/rental_combined.png", rental_plot, width = 12, height = 5, dpi = 300)
 ```
-
-    ## Warning: Removed 36 rows containing non-finite outside the scale range
-    ## (`stat_boxplot()`).
 
 # Problem 3
 
@@ -553,17 +537,18 @@ final_merged |>
     n_count = n(), 
     .groups = "drop"
   ) |> 
+  pivot_wider(
+    names_from = sex,
+    values_from = n_count
+  ) |> 
   knitr::kable() 
 ```
 
-| education              | sex    | n_count |
-|:-----------------------|:-------|--------:|
-| High school equivalent | female |      23 |
-| High school equivalent | male   |      35 |
-| Less than high school  | female |      28 |
-| Less than high school  | male   |      27 |
-| More than high school  | female |      59 |
-| More than high school  | male   |      56 |
+| education              | female | male |
+|:-----------------------|-------:|-----:|
+| High school equivalent |     23 |   35 |
+| Less than high school  |     28 |   27 |
+| More than high school  |     59 |   56 |
 
 **create a visualization of the age distributions for men and women in
 each education category.**
@@ -654,27 +639,27 @@ final_merged |>
   mutate(time = as.numeric(gsub("min", "", time))) |> 
   ggplot(aes(x = time, y = activity, color = sex)) +
   geom_smooth(se = FALSE, linewidth = 1) +
-  facet_grid(education ~ .) +
+  facet_wrap(education ~ .) +
   labs(
     title = "24-hour Activity Pattern by Education Level and Sex",
     x = "time (minutes)",
     y = "Activity Level",
     color = "Sex"
   ) +
-  theme_minimal()
+  theme_minimal() + 
+  theme(legend.position = "bottom")
 ```
 
 ![](p8105_hw3_rk3445_files/figure-gfm/unnamed-chunk-23-1.png)<!-- -->
 
 The plot displays the 24-hour activity level trends by education level
 and sex. Across all groups, activity levels are low during the early
-morning hours, rise sharply around mid-morning, and peak during daytime,
-followed by a steady decline in the evening and minimal activity
-overnight. Participants with more than high school education tend to
-show slightly higher and more consistent daytime activity, suggesting a
-structured daily routine. In contrast, those with less than high school
-education display greater variability throughout the day, with less
-pronounced peaks. The smooth trends also suggest that women tend to
-maintain slightly higher activity levels during daytime hours compared
-to men, particularly in the high school equivalent and more than high
-school groups.
+morning (around 0–300 minutes), rise sharply around mid-morning, and
+peak during daytime (approximately 600–1000 minutes), followed by a
+steady decline toward nighttime (after 1000 minutes).
+
+Individuals with less than high school education show a sharper rise and
+the highest daytime peaks, possibly reflecting irregular daily routines.
+Across all education levels, men and women show broadly similar temporal
+activity trends. However, women tend to have slightly higher daytime
+activity levels across the day.
