--- a/p8105_hw3_rk3445.md
+++ b/p8105_hw3_rk3445.md
@@ -304,72 +304,23 @@ zillow_nyc |>
   mutate(year = str_sub(date, 1, 4)) |> 
   group_by(county_name, year) |> 
   summarize(
-    avg_rental_price = mean(zori, na.rm = TRUE)
+    avg_rental_price = mean(zori, na.rm = TRUE), 
+    .groups = "drop"
   ) |> 
-  knitr::kable(
-    digits = 0,
-    caption = "Average Rental Price (ZORI) by NYC counties and Year",
-    col.names = c("Borough (County)", "Year", "Average ZORI")
-  )
+  pivot_wider(
+    names_from = year, 
+    values_from = avg_rental_price
+  ) |> 
+  knitr::kable()
 ```
 
-    ## `summarise()` has grouped output by 'county_name'. You can override using the
-    ## `.groups` argument.
-
-| Borough (County) | Year | Average ZORI |
-|:-----------------|:-----|-------------:|
-| Bronx            | 2015 |         1760 |
-| Bronx            | 2016 |         1520 |
-| Bronx            | 2017 |         1544 |
-| Bronx            | 2018 |         1639 |
-| Bronx            | 2019 |         1706 |
-| Bronx            | 2020 |         1811 |
-| Bronx            | 2021 |         1858 |
-| Bronx            | 2022 |         2054 |
-| Bronx            | 2023 |         2285 |
-| Bronx            | 2024 |         2497 |
-| Kings            | 2015 |         2493 |
-| Kings            | 2016 |         2520 |
-| Kings            | 2017 |         2546 |
-| Kings            | 2018 |         2547 |
-| Kings            | 2019 |         2631 |
-| Kings            | 2020 |         2555 |
-| Kings            | 2021 |         2550 |
-| Kings            | 2022 |         2868 |
-| Kings            | 2023 |         3015 |
-| Kings            | 2024 |         3127 |
-| New York         | 2015 |         3022 |
-| New York         | 2016 |         3039 |
-| New York         | 2017 |         3134 |
-| New York         | 2018 |         3184 |
-| New York         | 2019 |         3310 |
-| New York         | 2020 |         3107 |
-| New York         | 2021 |         3137 |
-| New York         | 2022 |         3778 |
-| New York         | 2023 |         3933 |
-| New York         | 2024 |         4078 |
-| Queens           | 2015 |         2215 |
-| Queens           | 2016 |         2272 |
-| Queens           | 2017 |         2263 |
-| Queens           | 2018 |         2292 |
-| Queens           | 2019 |         2388 |
-| Queens           | 2020 |         2316 |
-| Queens           | 2021 |         2211 |
-| Queens           | 2022 |         2406 |
-| Queens           | 2023 |         2562 |
-| Queens           | 2024 |         2694 |
-| Richmond         | 2015 |          NaN |
-| Richmond         | 2016 |          NaN |
-| Richmond         | 2017 |          NaN |
-| Richmond         | 2018 |          NaN |
-| Richmond         | 2019 |          NaN |
-| Richmond         | 2020 |         1978 |
-| Richmond         | 2021 |         2045 |
-| Richmond         | 2022 |         2147 |
-| Richmond         | 2023 |         2333 |
-| Richmond         | 2024 |         2536 |
-
-Average Rental Price (ZORI) by NYC counties and Year
+| county_name | 2015 | 2016 | 2017 | 2018 | 2019 | 2020 | 2021 | 2022 | 2023 | 2024 |
+|:---|---:|---:|---:|---:|---:|---:|---:|---:|---:|---:|
+| Bronx | 1759.595 | 1520.194 | 1543.599 | 1639.430 | 1705.589 | 1811.443 | 1857.777 | 2054.267 | 2285.459 | 2496.896 |
+| Kings | 2492.928 | 2520.357 | 2545.828 | 2547.291 | 2630.504 | 2555.051 | 2549.890 | 2868.199 | 3015.184 | 3126.803 |
+| New York | 3022.042 | 3038.818 | 3133.848 | 3183.703 | 3310.408 | 3106.517 | 3136.632 | 3778.375 | 3932.610 | 4078.440 |
+| Queens | 2214.707 | 2271.955 | 2263.303 | 2291.918 | 2387.816 | 2315.632 | 2210.787 | 2406.038 | 2561.615 | 2694.022 |
+| Richmond | NaN | NaN | NaN | NaN | NaN | 1977.608 | 2045.430 | 2147.436 | 2332.934 | 2536.442 |
 
 From the table, we can see the upward trend in rental prices over time
 for all boroughs in New York City. However, in 2021, both Kings and
@@ -596,7 +547,7 @@ level. Include a trend line or a smooth to illustrate differences.**
 total |> 
   ggplot(aes(x = age, y = total_activity, color = sex)) +
   geom_point(alpha = 0.5) +
-  geom_smooth(method = 'loess', se = FALSE) +
+  geom_smooth(method = 'loess', formula = y ~ x, se = FALSE) +
   facet_grid(. ~ education) +
   labs(
     title = "Total Activity vs. Age by Education and Sex",
@@ -606,8 +557,6 @@ total |>
   ) +
   theme_minimal()
 ```
-
-    ## `geom_smooth()` using formula = 'y ~ x'
 
 ![](p8105_hw3_rk3445_files/figure-gfm/unnamed-chunk-22-1.png)<!-- -->
 
